
Please go to [[https://code.renci.org/gf/project/jargon/]] for the latest news and info.

Jargon-core consists of the following libraries

* jargon-core - base libraries, implementation of the iRODS protocol
* jargon-data-utils - additional functionality for dealing with iRODS data, such as building trees, storing information in iRODS on behalf of applications, and doing diffs between local and iRODS
* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.4 through iRODS 3.2, and is tested with the current (as of release time) development version of iRODS

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==


==Features==

 * [#132] GSS and Kerberos Support in Jargon-core
 ** merge in plug-able authentication refactoring
 
 
 * [#870] jargon support for PAM
 ** Support for PAM authentication (per Chris Smith's updates to iRODS) as a pluggable auth module in Jargon
 
  [#974] anonymous link support
 ** added isUserHasPermission methods for collections and data objects that indicate that a user has at least read permission on a file or data object
 ** added AnonymousAccessService in data utils to help manage permissions for the anonymous user