@@ -46,6 +46,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 
 ==Bug Fixes==
 
+* [#977] -15000 errors in specific query
+** added KVP to packing instruction, which seems to be required in later revs of the HEAD that will be iRODS 3.2
 
 ==Features==
 
